# nevis-search-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  models.py  search.py
app/static/: index.html
nevis_search_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py
