[project]
name = "nevis-search-api"
version = "0.1.0"
description = "Nevis Backend Home Task"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic[email]>=2.8",
  "pydantic-settings>=2.4",
  "sentence-transformers>=3.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["."]
